// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`attention > an agent that looks stuck, and why 1`] = `
[
  [
    {
      "state": {
        "calls": 4,
        "count": 4,
        "inRow": true,
        "kind": "failing",
        "name": "Bash",
        "since": 1790707394928,
      },
      "text": "4 Bash calls failed in a row",
    },
    {
      "state": {
        "calls": 4,
        "count": 4,
        "inRow": true,
        "kind": "failing",
        "name": "Bash",
        "since": 1790707394928,
      },
      "text": "4 Bash calls failed in a row",
    },
    {
      "state": {
        "calls": 4,
        "count": 4,
        "inRow": true,
        "kind": "failing",
        "name": "Bash",
        "since": 1790707394928,
      },
      "text": "4 Bash calls failed in a row",
    },
  ],
  [
    {
      "state": {
        "calls": 10,
        "count": 8,
        "inRow": false,
        "kind": "failing",
        "name": null,
        "since": 1790707184928,
      },
      "text": "8 of its last 10 tool calls failed",
    },
    {
      "state": {
        "calls": 10,
        "count": 8,
        "inRow": false,
        "kind": "failing",
        "name": null,
        "since": 1790707184928,
      },
      "text": "8 of its last 10 tool calls failed",
    },
    {
      "state": {
        "calls": 10,
        "count": 8,
        "inRow": false,
        "kind": "failing",
        "name": null,
        "since": 1790707184928,
      },
      "text": "8 of its last 10 tool calls failed",
    },
  ],
  [
    {
      "state": {
        "kind": "tool",
        "name": "Bash",
        "since": 1790706554928,
      },
      "text": "One Bash call running for 15m",
    },
    {
      "state": {
        "kind": "tool",
        "name": "Bash",
        "since": 1790706554928,
      },
      "text": "One Bash call running for 15m",
    },
    {
      "state": null,
      "text": "",
    },
  ],
  [
    {
      "state": {
        "kind": "silent",
        "since": 1790706734928,
      },
      "text": "No progress for 12m",
    },
    {
      "state": {
        "kind": "silent",
        "since": 1790706734928,
      },
      "text": "No progress for 12m",
    },
    {
      "state": null,
      "text": "",
    },
  ],
  [
    {
      "state": null,
      "text": "",
    },
    {
      "state": null,
      "text": "",
    },
    {
      "state": null,
      "text": "",
    },
  ],
  [
    {
      "state": null,
      "text": "",
    },
    {
      "state": null,
      "text": "",
    },
    {
      "state": null,
      "text": "",
    },
  ],
]
`;

exports[`attention > how fresh a reading is 1`] = `
[
  {
    "age": 1800000,
    "stale": false,
  },
  {
    "age": 5400000,
    "stale": true,
  },
  {
    "age": 1500000,
    "stale": true,
  },
  {
    "age": null,
    "stale": false,
  },
  {
    "age": null,
    "stale": true,
  },
  {
    "age": null,
    "stale": true,
  },
]
`;

exports[`live agents > the ones waiting for you, longest first 1`] = `
[
  {
    "a": {
      "endedAt": 1790706914928,
      "id": "3",
      "kind": "main",
      "lastActivity": 1790707394928,
      "needsYou": "plan",
      "project": "p",
      "source": "claude",
      "status": "idle",
      "title": "A",
      "tool": null,
      "turnStartedAt": null,
    },
    "ms": 540000,
  },
  {
    "a": {
      "endedAt": 1790707154928,
      "id": "0",
      "kind": "main",
      "lastActivity": 1790707394928,
      "needsYou": "turn",
      "project": "p",
      "source": "claude",
      "status": "idle",
      "title": "A",
      "tool": null,
      "turnStartedAt": null,
    },
    "ms": 300000,
  },
  {
    "a": {
      "endedAt": 1790703854928,
      "id": "2",
      "kind": "main",
      "lastActivity": 1790707394928,
      "needsYou": "question",
      "project": "p",
      "source": "claude",
      "status": "idle",
      "title": "A",
      "tool": {
        "name": "AskUserQuestion",
        "startedAt": 1790707274928,
      },
      "turnStartedAt": null,
    },
    "ms": 180000,
  },
  {
    "a": {
      "endReason": "interrupted",
      "endedAt": 1790707334928,
      "id": "1",
      "kind": "main",
      "lastActivity": 1790707394928,
      "needsYou": "turn",
      "project": "p",
      "source": "claude",
      "status": "idle",
      "title": "A",
      "tool": null,
      "turnStartedAt": null,
    },
    "ms": 120000,
  },
  {
    "a": {
      "endedAt": null,
      "id": "4",
      "kind": "main",
      "lastActivity": 1790707394928,
      "needsYou": "approval",
      "project": "p",
      "source": "claude",
      "status": "idle",
      "title": "A",
      "tool": {
        "name": "Bash",
        "startedAt": 1790707394928,
      },
      "turnStartedAt": null,
    },
    "ms": 60000,
  },
]
`;

exports[`live agents > what each is doing, and since when 1`] = `
[
  {
    "doing": "Done, waiting for you",
    "since": 1790707154928,
  },
  {
    "doing": "Stopped, waiting for you",
    "since": 1790707334928,
  },
  {
    "doing": "Has a question for you",
    "since": 1790707274928,
  },
  {
    "doing": "Plan ready for your review",
    "since": 1790706914928,
  },
  {
    "doing": "Waiting for your approval",
    "since": 1790707394928,
  },
  {
    "doing": "Running the tests",
    "since": 1790707434928,
  },
  {
    "doing": "Using jira",
    "since": 1790707434928,
  },
  {
    "doing": "Thinking",
    "since": 1790707414928,
  },
  {
    "doing": "Writing a reply",
    "since": 1790707414928,
  },
  {
    "doing": "Finished",
    "since": 1790706854928,
  },
  {
    "doing": "Idle",
    "since": 1790707394928,
  },
]
`;

exports[`plan windows > Codex fast, running out 1`] = `
{
  "all": [
    {
      "expired": false,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790627404911,
        "text": "Runs out around 9:30pm",
        "tip": "At your pace over the last hour, this runs out 1h 10m before it resets.",
      },
      "provider": "codex",
      "resetsAt": 1790631640911,
      "source": "recorded",
      "stale": false,
      "usedPercent": 13,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790626756911,
        "text": "Runs out around 9:19pm",
        "tip": "At your pace over the last hour, this runs out 1h 21m before it resets.",
      },
      "provider": "codex",
      "resetsAt": 1790631640911,
      "source": "recorded",
      "stale": false,
      "usedPercent": 22,
    },
  ],
  "claude": [],
  "codex": [
    {
      "expired": false,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790627404911,
        "text": "Runs out around 9:30pm",
        "tip": "At your pace over the last hour, this runs out 1h 10m before it resets.",
      },
      "provider": "codex",
      "resetsAt": 1790631640911,
      "source": "recorded",
      "stale": false,
      "usedPercent": 13,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790626756911,
        "text": "Runs out around 9:19pm",
        "tip": "At your pace over the last hour, this runs out 1h 21m before it resets.",
      },
      "provider": "codex",
      "resetsAt": 1790631640911,
      "source": "recorded",
      "stale": false,
      "usedPercent": 22,
    },
  ],
}
`;

exports[`plan windows > Codex fast, running out, 24-hour clock 1`] = `
{
  "all": [
    {
      "expired": false,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790627404911,
        "text": "Runs out around 21:30",
        "tip": "At your pace over the last hour, this runs out 1h 10m before it resets.",
      },
      "provider": "codex",
      "resetsAt": 1790631640911,
      "source": "recorded",
      "stale": false,
      "usedPercent": 13,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790626756911,
        "text": "Runs out around 21:19",
        "tip": "At your pace over the last hour, this runs out 1h 21m before it resets.",
      },
      "provider": "codex",
      "resetsAt": 1790631640911,
      "source": "recorded",
      "stale": false,
      "usedPercent": 22,
    },
  ],
  "claude": [],
  "codex": [
    {
      "expired": false,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790627404911,
        "text": "Runs out around 21:30",
        "tip": "At your pace over the last hour, this runs out 1h 10m before it resets.",
      },
      "provider": "codex",
      "resetsAt": 1790631640911,
      "source": "recorded",
      "stale": false,
      "usedPercent": 13,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790626756911,
        "text": "Runs out around 21:19",
        "tip": "At your pace over the last hour, this runs out 1h 21m before it resets.",
      },
      "provider": "codex",
      "resetsAt": 1790631640911,
      "source": "recorded",
      "stale": false,
      "usedPercent": 22,
    },
  ],
}
`;

exports[`plan windows > Codex fresh, one window past its reset 1`] = `
{
  "all": [
    {
      "expired": true,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1790620780911,
      "source": "recorded",
      "stale": false,
      "usedPercent": null,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790632840911,
        "text": "Runs out around 11:00pm",
        "tip": "At your pace over the last hour, this runs out 5d 15h before it resets.",
      },
      "provider": "codex",
      "resetsAt": 1791120778000,
      "source": "recorded",
      "stale": false,
      "usedPercent": 22,
    },
  ],
  "claude": [],
  "codex": [
    {
      "expired": true,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1790620780911,
      "source": "recorded",
      "stale": false,
      "usedPercent": null,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790632840911,
        "text": "Runs out around 11:00pm",
        "tip": "At your pace over the last hour, this runs out 5d 15h before it resets.",
      },
      "provider": "codex",
      "resetsAt": 1791120778000,
      "source": "recorded",
      "stale": false,
      "usedPercent": 22,
    },
  ],
}
`;

exports[`plan windows > Codex fresh, one window past its reset, 24-hour clock 1`] = `
{
  "all": [
    {
      "expired": true,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1790620780911,
      "source": "recorded",
      "stale": false,
      "usedPercent": null,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790632840911,
        "text": "Runs out around 23:00",
        "tip": "At your pace over the last hour, this runs out 5d 15h before it resets.",
      },
      "provider": "codex",
      "resetsAt": 1791120778000,
      "source": "recorded",
      "stale": false,
      "usedPercent": 22,
    },
  ],
  "claude": [],
  "codex": [
    {
      "expired": true,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1790620780911,
      "source": "recorded",
      "stale": false,
      "usedPercent": null,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790632840911,
        "text": "Runs out around 23:00",
        "tip": "At your pace over the last hour, this runs out 5d 15h before it resets.",
      },
      "provider": "codex",
      "resetsAt": 1791120778000,
      "source": "recorded",
      "stale": false,
      "usedPercent": 22,
    },
  ],
}
`;

exports[`plan windows > Codex's live check, newer 1`] = `
{
  "all": [
    {
      "expired": true,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1790633631000,
      "source": "exact",
      "stale": false,
      "usedPercent": null,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": {
        "level": "quiet",
        "projected": 30,
        "text": "Quiet lately, no risk right now",
        "tip": "Little usage over the last day.",
      },
      "provider": "codex",
      "resetsAt": 1791120778000,
      "source": "exact",
      "stale": false,
      "usedPercent": 30,
    },
  ],
  "claude": [],
  "codex": [
    {
      "expired": true,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1790633631000,
      "source": "exact",
      "stale": false,
      "usedPercent": null,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": {
        "level": "quiet",
        "projected": 30,
        "text": "Quiet lately, no risk right now",
        "tip": "Little usage over the last day.",
      },
      "provider": "codex",
      "resetsAt": 1791120778000,
      "source": "exact",
      "stale": false,
      "usedPercent": 30,
    },
  ],
}
`;

exports[`plan windows > Codex's live check, newer, 24-hour clock 1`] = `
{
  "all": [
    {
      "expired": true,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1790633631000,
      "source": "exact",
      "stale": false,
      "usedPercent": null,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": {
        "level": "quiet",
        "projected": 30,
        "text": "Quiet lately, no risk right now",
        "tip": "Little usage over the last day.",
      },
      "provider": "codex",
      "resetsAt": 1791120778000,
      "source": "exact",
      "stale": false,
      "usedPercent": 30,
    },
  ],
  "claude": [],
  "codex": [
    {
      "expired": true,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1790633631000,
      "source": "exact",
      "stale": false,
      "usedPercent": null,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": {
        "level": "quiet",
        "projected": 30,
        "text": "Quiet lately, no risk right now",
        "tip": "Little usage over the last day.",
      },
      "provider": "codex",
      "resetsAt": 1791120778000,
      "source": "exact",
      "stale": false,
      "usedPercent": 30,
    },
  ],
}
`;

exports[`plan windows > Codex's live check, signed out 1`] = `
{
  "all": [],
  "claude": [],
  "codex": [],
}
`;

exports[`plan windows > Codex's live check, signed out, 24-hour clock 1`] = `
{
  "all": [],
  "claude": [],
  "codex": [],
}
`;

exports[`plan windows > a pace that runs out soon 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": {
        "level": "crit",
        "projected": 100,
        "runOutAt": 1790708174928,
        "text": "Runs out around 7:56pm",
        "tip": "At your pace over the last 30 minutes, this runs out 3h 48m before it resets.",
      },
      "provider": "claude",
      "resetsAt": 1790721854928,
      "source": "exact",
      "spent": 120,
      "stale": false,
      "usedPercent": 60,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790828414928,
        "text": "Runs out around Thu 5:20am",
        "tip": "At your pace over the last 7 days, this runs out 3d 14h before it resets.",
      },
      "provider": "claude",
      "resetsAt": 1791139454928,
      "source": "exact",
      "spent": 1000,
      "stale": false,
      "usedPercent": 50,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": {
        "level": "crit",
        "projected": 100,
        "runOutAt": 1790708174928,
        "text": "Runs out around 7:56pm",
        "tip": "At your pace over the last 30 minutes, this runs out 3h 48m before it resets.",
      },
      "provider": "claude",
      "resetsAt": 1790721854928,
      "source": "exact",
      "spent": 120,
      "stale": false,
      "usedPercent": 60,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790828414928,
        "text": "Runs out around Thu 5:20am",
        "tip": "At your pace over the last 7 days, this runs out 3d 14h before it resets.",
      },
      "provider": "claude",
      "resetsAt": 1791139454928,
      "source": "exact",
      "spent": 1000,
      "stale": false,
      "usedPercent": 50,
    },
  ],
  "codex": [],
}
`;

exports[`plan windows > a pace that runs out soon, 24-hour clock 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": {
        "level": "crit",
        "projected": 100,
        "runOutAt": 1790708174928,
        "text": "Runs out around 19:56",
        "tip": "At your pace over the last 30 minutes, this runs out 3h 48m before it resets.",
      },
      "provider": "claude",
      "resetsAt": 1790721854928,
      "source": "exact",
      "spent": 120,
      "stale": false,
      "usedPercent": 60,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790828414928,
        "text": "Runs out around Thu 05:20",
        "tip": "At your pace over the last 7 days, this runs out 3d 14h before it resets.",
      },
      "provider": "claude",
      "resetsAt": 1791139454928,
      "source": "exact",
      "spent": 1000,
      "stale": false,
      "usedPercent": 50,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": {
        "level": "crit",
        "projected": 100,
        "runOutAt": 1790708174928,
        "text": "Runs out around 19:56",
        "tip": "At your pace over the last 30 minutes, this runs out 3h 48m before it resets.",
      },
      "provider": "claude",
      "resetsAt": 1790721854928,
      "source": "exact",
      "spent": 120,
      "stale": false,
      "usedPercent": 60,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707394928,
      "outlook": {
        "level": "warn",
        "projected": 100,
        "runOutAt": 1790828414928,
        "text": "Runs out around Thu 05:20",
        "tip": "At your pace over the last 7 days, this runs out 3d 14h before it resets.",
      },
      "provider": "claude",
      "resetsAt": 1791139454928,
      "source": "exact",
      "spent": 1000,
      "stale": false,
      "usedPercent": 50,
    },
  ],
  "codex": [],
}
`;

exports[`plan windows > exact switched on but failing 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": {
        "level": "ok",
        "projected": 27.814476522266126,
        "text": "On pace for ~28% by the reset",
        "tip": "Based on your pace over the last 30 minutes.",
      },
      "provider": "claude",
      "resetsAt": 1790717400000,
      "source": "estimate",
      "spent": 32.1829158,
      "stale": false,
      "usedPercent": 14,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": 1223.4351388499917,
      "stale": false,
      "usedPercent": null,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": {
        "level": "ok",
        "projected": 27.814476522266126,
        "text": "On pace for ~28% by the reset",
        "tip": "Based on your pace over the last 30 minutes.",
      },
      "provider": "claude",
      "resetsAt": 1790717400000,
      "source": "estimate",
      "spent": 32.1829158,
      "stale": false,
      "usedPercent": 14,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": 1223.4351388499917,
      "stale": false,
      "usedPercent": null,
    },
  ],
  "codex": [],
}
`;

exports[`plan windows > exact switched on but failing, 24-hour clock 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": {
        "level": "ok",
        "projected": 27.814476522266126,
        "text": "On pace for ~28% by the reset",
        "tip": "Based on your pace over the last 30 minutes.",
      },
      "provider": "claude",
      "resetsAt": 1790717400000,
      "source": "estimate",
      "spent": 32.1829158,
      "stale": false,
      "usedPercent": 14,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": 1223.4351388499917,
      "stale": false,
      "usedPercent": null,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": {
        "level": "ok",
        "projected": 27.814476522266126,
        "text": "On pace for ~28% by the reset",
        "tip": "Based on your pace over the last 30 minutes.",
      },
      "provider": "claude",
      "resetsAt": 1790717400000,
      "source": "estimate",
      "spent": 32.1829158,
      "stale": false,
      "usedPercent": 14,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": 1223.4351388499917,
      "stale": false,
      "usedPercent": null,
    },
  ],
  "codex": [],
}
`;

exports[`plan windows > exact, a limit hit and one missing 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": true,
      "observedAt": 1790707394928,
      "outlook": null,
      "provider": "claude",
      "resetsAt": 1790711054928,
      "source": "exact",
      "spent": 200,
      "stale": false,
      "usedPercent": 100,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": true,
      "observedAt": 1790707394928,
      "outlook": null,
      "provider": "claude",
      "resetsAt": 1790711054928,
      "source": "exact",
      "spent": 200,
      "stale": false,
      "usedPercent": 100,
    },
  ],
  "codex": [],
}
`;

exports[`plan windows > exact, a limit hit and one missing, 24-hour clock 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": true,
      "observedAt": 1790707394928,
      "outlook": null,
      "provider": "claude",
      "resetsAt": 1790711054928,
      "source": "exact",
      "spent": 200,
      "stale": false,
      "usedPercent": 100,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": true,
      "observedAt": 1790707394928,
      "outlook": null,
      "provider": "claude",
      "resetsAt": 1790711054928,
      "source": "exact",
      "spent": 200,
      "stale": false,
      "usedPercent": 100,
    },
  ],
  "codex": [],
}
`;

exports[`plan windows > exact, fresh 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707334928,
      "outlook": {
        "level": "ok",
        "projected": 29.66460336,
        "text": "On pace for ~30% by the reset",
        "tip": "Based on your pace over the last 30 minutes.",
      },
      "provider": "claude",
      "resetsAt": 1790718254928,
      "source": "exact",
      "spent": 30,
      "stale": false,
      "usedPercent": 14,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707334928,
      "outlook": {
        "level": "ok",
        "projected": 66.21646726107126,
        "text": "On pace for ~66% by the reset",
        "tip": "Based on your pace over the last 7 days.",
      },
      "provider": "claude",
      "resetsAt": 1790966654928,
      "source": "exact",
      "spent": 800,
      "stale": false,
      "usedPercent": 40,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707334928,
      "outlook": {
        "level": "ok",
        "projected": 29.66460336,
        "text": "On pace for ~30% by the reset",
        "tip": "Based on your pace over the last 30 minutes.",
      },
      "provider": "claude",
      "resetsAt": 1790718254928,
      "source": "exact",
      "spent": 30,
      "stale": false,
      "usedPercent": 14,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707334928,
      "outlook": {
        "level": "ok",
        "projected": 66.21646726107126,
        "text": "On pace for ~66% by the reset",
        "tip": "Based on your pace over the last 7 days.",
      },
      "provider": "claude",
      "resetsAt": 1790966654928,
      "source": "exact",
      "spent": 800,
      "stale": false,
      "usedPercent": 40,
    },
  ],
  "codex": [],
}
`;

exports[`plan windows > exact, fresh, 24-hour clock 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707334928,
      "outlook": {
        "level": "ok",
        "projected": 29.66460336,
        "text": "On pace for ~30% by the reset",
        "tip": "Based on your pace over the last 30 minutes.",
      },
      "provider": "claude",
      "resetsAt": 1790718254928,
      "source": "exact",
      "spent": 30,
      "stale": false,
      "usedPercent": 14,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707334928,
      "outlook": {
        "level": "ok",
        "projected": 66.21646726107126,
        "text": "On pace for ~66% by the reset",
        "tip": "Based on your pace over the last 7 days.",
      },
      "provider": "claude",
      "resetsAt": 1790966654928,
      "source": "exact",
      "spent": 800,
      "stale": false,
      "usedPercent": 40,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707334928,
      "outlook": {
        "level": "ok",
        "projected": 29.66460336,
        "text": "On pace for ~30% by the reset",
        "tip": "Based on your pace over the last 30 minutes.",
      },
      "provider": "claude",
      "resetsAt": 1790718254928,
      "source": "exact",
      "spent": 30,
      "stale": false,
      "usedPercent": 14,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707334928,
      "outlook": {
        "level": "ok",
        "projected": 66.21646726107126,
        "text": "On pace for ~66% by the reset",
        "tip": "Based on your pace over the last 7 days.",
      },
      "provider": "claude",
      "resetsAt": 1790966654928,
      "source": "exact",
      "spent": 800,
      "stale": false,
      "usedPercent": 40,
    },
  ],
  "codex": [],
}
`;

exports[`plan windows > exact, too old to forecast from 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790705354928,
      "outlook": null,
      "provider": "claude",
      "resetsAt": 1790714654928,
      "source": "exact",
      "spent": 90,
      "stale": true,
      "usedPercent": 55,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790705354928,
      "outlook": null,
      "provider": "claude",
      "resetsAt": 1790793854928,
      "source": "exact",
      "spent": 900,
      "stale": true,
      "usedPercent": 70,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790705354928,
      "outlook": null,
      "provider": "claude",
      "resetsAt": 1790714654928,
      "source": "exact",
      "spent": 90,
      "stale": true,
      "usedPercent": 55,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790705354928,
      "outlook": null,
      "provider": "claude",
      "resetsAt": 1790793854928,
      "source": "exact",
      "spent": 900,
      "stale": true,
      "usedPercent": 70,
    },
  ],
  "codex": [],
}
`;

exports[`plan windows > exact, too old to forecast from, 24-hour clock 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790705354928,
      "outlook": null,
      "provider": "claude",
      "resetsAt": 1790714654928,
      "source": "exact",
      "spent": 90,
      "stale": true,
      "usedPercent": 55,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790705354928,
      "outlook": null,
      "provider": "claude",
      "resetsAt": 1790793854928,
      "source": "exact",
      "spent": 900,
      "stale": true,
      "usedPercent": 70,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790705354928,
      "outlook": null,
      "provider": "claude",
      "resetsAt": 1790714654928,
      "source": "exact",
      "spent": 90,
      "stale": true,
      "usedPercent": 55,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790705354928,
      "outlook": null,
      "provider": "claude",
      "resetsAt": 1790793854928,
      "source": "exact",
      "spent": 900,
      "stale": true,
      "usedPercent": 70,
    },
  ],
  "codex": [],
}
`;

exports[`plan windows > no window running 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": true,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": undefined,
      "stale": false,
      "usedPercent": 0,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": 1223.4351388499917,
      "stale": false,
      "usedPercent": null,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": true,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": undefined,
      "stale": false,
      "usedPercent": 0,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": 1223.4351388499917,
      "stale": false,
      "usedPercent": null,
    },
  ],
  "codex": [],
}
`;

exports[`plan windows > no window running, 24-hour clock 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": true,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": undefined,
      "stale": false,
      "usedPercent": 0,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": 1223.4351388499917,
      "stale": false,
      "usedPercent": null,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": true,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": undefined,
      "stale": false,
      "usedPercent": 0,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": 1223.4351388499917,
      "stale": false,
      "usedPercent": null,
    },
  ],
  "codex": [],
}
`;

exports[`plan windows > the estimate, and what Codex recorded a day ago 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": {
        "level": "ok",
        "projected": 27.814476522266126,
        "text": "On pace for ~28% by the reset",
        "tip": "Based on your pace over the last 30 minutes.",
      },
      "provider": "claude",
      "resetsAt": 1790717400000,
      "source": "estimate",
      "spent": 32.1829158,
      "stale": false,
      "usedPercent": 14,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": 1223.4351388499917,
      "stale": false,
      "usedPercent": null,
    },
    {
      "expired": true,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1790633631000,
      "source": "recorded",
      "stale": true,
      "usedPercent": null,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1791120778000,
      "source": "recorded",
      "stale": true,
      "usedPercent": 22,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": {
        "level": "ok",
        "projected": 27.814476522266126,
        "text": "On pace for ~28% by the reset",
        "tip": "Based on your pace over the last 30 minutes.",
      },
      "provider": "claude",
      "resetsAt": 1790717400000,
      "source": "estimate",
      "spent": 32.1829158,
      "stale": false,
      "usedPercent": 14,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": 1223.4351388499917,
      "stale": false,
      "usedPercent": null,
    },
  ],
  "codex": [
    {
      "expired": true,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1790633631000,
      "source": "recorded",
      "stale": true,
      "usedPercent": null,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1791120778000,
      "source": "recorded",
      "stale": true,
      "usedPercent": 22,
    },
  ],
}
`;

exports[`plan windows > the estimate, and what Codex recorded a day ago, 24-hour clock 1`] = `
{
  "all": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": {
        "level": "ok",
        "projected": 27.814476522266126,
        "text": "On pace for ~28% by the reset",
        "tip": "Based on your pace over the last 30 minutes.",
      },
      "provider": "claude",
      "resetsAt": 1790717400000,
      "source": "estimate",
      "spent": 32.1829158,
      "stale": false,
      "usedPercent": 14,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": 1223.4351388499917,
      "stale": false,
      "usedPercent": null,
    },
    {
      "expired": true,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1790633631000,
      "source": "recorded",
      "stale": true,
      "usedPercent": null,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1791120778000,
      "source": "recorded",
      "stale": true,
      "usedPercent": 22,
    },
  ],
  "claude": [
    {
      "id": "claude:session",
      "idle": false,
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": {
        "level": "ok",
        "projected": 27.814476522266126,
        "text": "On pace for ~28% by the reset",
        "tip": "Based on your pace over the last 30 minutes.",
      },
      "provider": "claude",
      "resetsAt": 1790717400000,
      "source": "estimate",
      "spent": 32.1829158,
      "stale": false,
      "usedPercent": 14,
    },
    {
      "id": "claude:weekly",
      "idle": false,
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790707443022,
      "outlook": null,
      "provider": "claude",
      "resetsAt": null,
      "source": "estimate",
      "spent": 1223.4351388499917,
      "stale": false,
      "usedPercent": null,
    },
  ],
  "codex": [
    {
      "expired": true,
      "id": "codex:codex:primary",
      "label": "5-hour",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1790633631000,
      "source": "recorded",
      "stale": true,
      "usedPercent": null,
    },
    {
      "expired": false,
      "id": "codex:codex:secondary",
      "label": "Weekly",
      "limited": false,
      "observedAt": 1790620840911,
      "outlook": null,
      "provider": "codex",
      "resetsAt": 1791120778000,
      "source": "recorded",
      "stale": true,
      "usedPercent": 22,
    },
  ],
}
`;
